# dirtree-db

./: .gitignore  CONTRIBUTING.md  README.md  default.nix  devenv.nix  flake.nix  pyproject.toml  result  usage.md
.github/workflows/: publish.yaml  test.yaml
src/dirtree_db/: __init__.py  core.py
tests/: conftest.py  test_core.py
