[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dirtree-db"
version = "0.1.0"
description = "Plain file hierarchical database"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LGPL-3.0-or-later" }
authors = [
    { name = "First-Non-Interesting-Username", email = "janekmusin@proton.me" },
]
dependencies = [
    "jsonschema>=4.17",
]

[project.urls]
Homepage = "https://github.com/First-Non-Interesting-Username/dirtree-db"
Repository = "https://github.com/First-Non-Interesting-Username/dirtree-db"
Issues = "https://github.com/First-Non-Interesting-Username/dirtree-db/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dirtree_db"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-md",
  "jsf @ git+https://github.com/ghandic/jsf.git@a37fccfee75daf14a5c3462555f8a3eb2b281b5c",
]
